# Smoothify

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
examples/: Water.gpkg  real_world_water_example.ipynb  usage_examples.ipynb
images/: generate_readme_image.ipynb
smoothify/: __init__.py  coordinator.py  geometry_ops.py  smoothify_core.py
tests/: README.md  __init__.py  conftest.py  test_area_tolerance.py  test_auto_segment_length.py  test_chaikin.py  test_edge_cases_coverage.py  test_geometry_types.py  test_smoothify_api.py  test_smoothify_core.py  visual_tests.ipynb
